--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Digital Marketing Agency|Best Development </title>
     <link rel="stylesheet" href="styles.css">
 
+<meta name="google-site-verification" content="6IM5MLHDlxUfz3e2YXDNDv3IvKdGf45WCTmPZy6lN7c" />
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
