--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Marketing Agency|Best Development </title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="l5Yng3SdwuIxrGgFuvzNXPHxgshvW4kZ8vuV6tqdhcQ" />
 
-    <!-- Google Tag Manager --><meta name="google-site-verification" content="KLQj3egTafEyXn2mqg2CInRK832kGkoycUzW87pjLis" />
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
